<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/title"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/content"
            android:inputType="textMultiLine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetDate"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="SetDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddAlarm"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="Set Alarm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>